--- a/ZhihuColumn/app/src/main/AndroidManifest.xml
+++ b/ZhihuColumn/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".BaseActivity" />
-        <!--<activity android:name=".main.ContentDetailActivity"></activity>-->
+        <!-- <activity android:name=".main.ContentDetailActivity"></activity> -->
+        <!--<activity android:name=".main.TouchTestActivity"></activity>-->
     </application>
 
 </manifest>
