添加BlurredAlbumArtActivity，类似网易云播放界面的模糊背景效果。

--- a/ZhihuColumn/app/src/main/AndroidManifest.xml
+++ b/ZhihuColumn/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         </activity>
         <activity android:name=".BaseActivity" />
         <!-- <activity android:name=".main.ContentDetailActivity"></activity> -->
-        <!--<activity android:name=".main.TouchTestActivity"></activity>-->
+        <!-- <activity android:name=".main.TouchTestActivity"></activity> -->
+        <activity android:name=".main.BlurredAlbumArtActivity"></activity>
     </application>
 
 </manifest>
