--- a/ZhihuColumn/app/build.gradle
+++ b/ZhihuColumn/app/build.gradle
@@ -26,6 +26,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
+    compile 'com.android.support:palette-v7:23.2.1'
+    compile 'com.android.support:percent:23.2.1'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.squareup.okhttp3:okhttp:3.3.1'
